syntax = "proto3";

package register_store_request;

// A store registration request
message RegisterStoreRequest {
    string contact_first_name = 1;
    string contact_last_name = 2;
    string contact_email = 3;
    string store_name = 5;
    string store_url = 6;
    string discord_username = 10;
    string state = 27;
    string country = 29;
    bytes public_signing_key = 30;
    uint64 timestamp = 50;
}