syntax = "proto3";

package response;

// Some ecdh key information. This key does not expire, but it is important
// that this key is used as few times as possible. Ideally, the store will
// overwrite the last key info as it receives a new key.
message EcdhKey {
    bytes ecdh_key_id = 1;
    bytes ecdh_public_key = 2;
}

// An API response from the service.
//
// To decrypt `data`, you will need to use the same ECDH private key 
// and ECDH public key that was used to encrypt the `data` field of 
// the request.
// 
// There will be a signature stored in the `Signature` header, which is 
// computed from a hash of this encoded structure.
message Response {
    // Encrypted payload with the nonce prefixed to the encrypted data
    bytes data = 2;

    // the `salt` string for use in an HKDF for decrypting `data`
    string ecdh_salt = 3;

    // the `info` string for use in an HKDF for decrypting `data`
    string ecdh_info = 4;

    // The protobuf-encoded key information for the client to use for their next 
    // request
    EcdhKey next_ecdh_key = 5;

    // the timestamp, in seconds since UNIX_EPOCH
    uint64 timestamp = 6;
}